--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
+    "test": "mocha",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -55,6 +56,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.55",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.55",
     "@electron-forge/maker-zip": "^6.0.0-beta.55",
-    "electron": "12.0.9"
+    "electron": "12.0.9",
+    "mocha": "^8.4.0",
+    "spectron": "^14.0.0"
   }
 }
